--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
     background-color: aliceblue;
+    margin-bottom: 50px;
+    margin-left: 5px;
 }
 .exercise-container{
     display: grid;
