--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,24 @@
 .header-container{
-    background-color: rgb(90, 87, 87);
-    color: white;
     display: flex;
     align-items: center;
     height: 90px;
+    width: 100%;
 }
 .header-container h1{
-    margin-left: 20px;
+    display: inline;
+    margin-left: 50px;
 }
 .header-container img{
     width: 150px;
     height: 50px;
     margin-left: 50px;
+}
+@media screen and (max-width:768px ) {
+    .header-container{
+        width: 100%;
+    }
+    .header-container h1{
+        font-size: 20px;
+    }
+    
 }
